# feather-flow

./: .gitignore  .npmignore  ACKNOWLEDGMENTS.md  AGENT_HANDOFF.md  CLAUDE.md  LICENSE  README.md  install.sh  package.json  pyproject.toml  uninstall.sh
.claude/commands/: research_codebase.md  research_external.md
.claude/commands-archive/openspec-siraj/: apply.md  ff.md
.claude/commands-archive/siraj-openspec/: apply.md  continue.md  ff.md  onboard.md  propose.md  sync.md
.claude/commands/openspec-siraj/: archive.md  continue.md  explore.md  new.md  onboard.md  propose.md  sync.md  verify.md
.claude/commands/siraj-openspec/: new.md  (+3 more)
.claude/rules/: feather-flow-project.md
.claude/skills/: README.md
.github/workflows/: publish.yml
.planning/codebase/: ARCHITECTURE.md  CONVENTIONS.md  STRUCTURE.md
docs/: CHANGELOG.md  ORIENTATION.md  README.md  prd.md  spec-conventions.md  testing-feather-etl.md  testing-feather-flow.md  testing.md  workflow.md
docs/architecture/: README.md  warehouse-layers.md
docs/conventions/: README.md  package-layout.md
docs/issues/: 54-auto-discover-dag.md  58-column-projection.md  63-preflight-adaptive-bucket.md  README.md  rethink-mode-system.md
docs/plans/: 2026-05-11-feather-transform.md  2026-05-15-issue-63-preflight-adaptive-bucket.md
docs/prd/: 001-explore-phase.md  PRD-001-explore-phase.md
docs/reference/: job-to-be-done-reframing.md  personas.md  warehouse-layers.md
hooks/: check-update.js
openspec/: config.yaml
scripts/: manual_transport_equivalence.py
skills/feather-brainstorm/: SKILL.md
skills/feather-execute-task/: SKILL.md
skills/feather-flow/: SKILL.md
skills/feather-spec/: SKILL.md
skills/feather:add-slice/: SKILL.md
skills/feather:create-design/: SKILL.md
skills/feather:create-issue/: SKILL.md
skills/feather:create-plan/: SKILL.md
skills/feather:create-spec/: SKILL.md
skills/feather:create-ui-mockup/: SKILL.md
skills/feather:debug/: SKILL.md  condition-based-waiting.md  defense-in-depth.md  hypothesis-and-verification.md  investigation-techniques.md  root-cause-tracing.md
skills/feather:decision-log/: SKILL.md
skills/feather:derive-tests/: SKILL.md
skills/feather:execute/: SKILL.md  code-quality-reviewer-prompt.md  implementer-prompt.md
skills/feather:finish/: SKILL.md
skills/feather:help/: SKILL.md
skills/feather:isolate-work/: SKILL.md
skills/feather:pause-slice/: SKILL.md
skills/feather:polish/: SKILL.md
skills/feather:research-log/: SKILL.md
skills/feather:resume-slice/: SKILL.md
skills/feather:review-convex-tests/: SKILL.md
skills/feather:review-design/: SKILL.md
skills/feather:setup-convex-testing/: SKILL.md
skills/feather:setup-tdd-guard/: SKILL.md
skills/feather:slice-project/: SKILL.md
skills/feather:update/: SKILL.md
skills/feather:verify/: SKILL.md
skills/feather:work-slice/: SKILL.md
skills/feather:workflow/: SKILL.md
skills/feather:write-tests/: SKILL.md  testing-anti-patterns.md
src/feather_etl/: cli.py  cli_test.py  config.py  curation.py  extract.py  extract_windows.py  history.py  pipeline.py  planner.py  preflight_banner.py  setup.py  state.py  transform_deps.py  transforms.py
src/feather_flow/: __init__.py  alerts.py  cli.py  config.py  curation.py  discover.py  discover_state.py  dq.py  exceptions.py  extract.py  extract_windows.py  history.py  init_wizard.py  output.py  pipeline.py  planner.py  preflight_banner.py  schema_drift.py  setup.py  state.py  status.py  transform_deps.py  transforms.py  validate.py  viewer_server.py
tests/: README.md  conftest.py  db_bootstrap.py  helpers.py
tests/e2e/: conftest.py  test_00_cli_structure.py  test_01_scaffold.py  test_02_validate.py  test_03_discover.py  test_04_extract_full.py  test_07_transforms.py  test_12_extract.py  test_15_history.py  test_16_view.py  test_fixture_smoke.py
tests/integration/: conftest.py  test_append.py  test_architecture_purity.py  test_csv_glob.py  test_curation_config.py  test_dedup.py  test_discover.py  test_dq.py  test_extract_pipeline.py  test_extract_refresh_safety.py  test_extract_resume.py  test_extract_windows_integration.py  test_incremental.py  test_integration.py  test_jsonl_logging.py  test_mode.py  test_pipeline.py  test_preflight_integration.py  test_readonly_commands.py  test_retry.py  test_run_transforms.py  test_schema_drift.py  test_setup.py  test_transform_command.py  test_transforms.py  test_transport_equivalence.py  test_validate.py
tests/invariants/: test_cli_surface.py  test_file_style.py
tests/unit/: test_alerts.py  test_append.py  test_boundary_dedup.py  test_bronze_check.py  test_config.py  test_curation.py  test_dedup.py  test_discover_io.py  test_discover_state.py  test_dq.py  test_explicit_name_flag.py  test_extract_windows_date.py  test_extract_windows_pk_range.py  test_extract_windows_planner.py  test_incremental.py  test_mode.py  test_output.py  test_planner.py  test_preflight_banner.py  test_retry.py  test_schema_drift.py  test_state.py  test_state_trigger.py  test_transform_deps.py  test_transforms.py  test_viewer_server.py
(+159 files in other folders)
