[project]
name = "feather-etl"
version = "0.1.3"
description = "Config-driven ETL for heterogeneous ERP sources → local DuckDB"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Siraj Samsudeen", email = "mailsiraj@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["etl", "duckdb", "erp", "data-engineering", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "pyodbc>=5.0",
    "arrow-odbc>=8.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "pytz",  # not imported directly, but DuckDB needs it for timestamp→Python conversion
    "mysql-connector-python>=8.0",
    "sqlglot>=26.0",  # SQL AST parsing for transform DAG auto-discovery (issue #54)
]

[project.urls]
Homepage = "https://github.com/siraj-samsudeen/feather-etl"
Repository = "https://github.com/siraj-samsudeen/feather-etl"
Issues = "https://github.com/siraj-samsudeen/feather-etl/issues"

[project.scripts]
feather = "feather_etl.cli:app"
feather-etl = "feather_etl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feather_etl"]
include = ["src/feather_etl/resources/**"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "scripts/",
    "docs/",
    ".claude/",
    ".codegraph/",
    ".planning/",
]

[dependency-groups]
dev = [
    "poethepoet>=0.44.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-testmon>=2.2.0",
    "pytest-watcher>=0.6.3",
]

[tool.poe.tasks.cov]
help = "Run tests matching <keyword> with branch coverage for feather_etl.<keyword>, then open the HTML report."
shell = "pytest -k ${keyword} -rs --cov-branch --cov=feather_etl.${keyword} --cov-report=term-missing --cov-report=html ; open htmlcov/index.html"
args = [{ name = "keyword", positional = true, required = true }]

[tool.poe.tasks.cov-all]
help = "Branch coverage across the whole feather_etl package, then open the HTML report."
shell = "pytest -rs --cov-branch --cov=feather_etl --cov-report=term-missing --cov-report=html ; open htmlcov/index.html"

[tool.poe.tasks.tw]
help = "Watch mode: re-run only tests affected by saved changes (Jest-like). Extra args go to pytest, e.g. `poe tw -k transforms`."
cmd = "ptw . --now --testmon -q"

[tool.poe.tasks.tw-all]
help = "Watch mode without testmon: re-run the full suite on every change."
cmd = "ptw . --now -q"

[tool.poe.tasks.tw-reset]
help = "Delete the testmon dependency cache (use when watch mode skips tests it shouldn't)."
shell = "rm -f .testmondata .testmondata-journal"
