[project]
name = "feather-etl"
version = "0.0.0"
description = "Config-driven Python ETL — workbench for heterogeneous ERP sources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Siraj Samsudeen", email = "mailsiraj@gmail.com" }
]
dependencies = [
    "typer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feather_etl"]
exclude = [
    "src/feather_etl/**/*_test.py",
    "src/feather_etl/**/scenarios/**",
    "src/feather_etl/testing/**",
]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"

[tool.coverage.run]
branch = true
source = ["src/feather_etl"]
omit = ["*_test.py"]
