[project]
name = "feather-flow"
version = "0.0.0"
description = "Config-driven Python ETL — workbench for heterogeneous ERP sources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Siraj Samsudeen", email = "mailsiraj@gmail.com" }
]
dependencies = [
    "typer",
]

[project.scripts]
feather = "feather_flow.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feather_flow"]
exclude = [
    "src/feather_flow/**/*_test.py",
    "src/feather_flow/**/scenarios/**",
    "src/feather_flow/testing/**",
]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"

[tool.coverage.run]
branch = true
source = ["src/feather_flow"]
omit = ["*_test.py"]
